Lowered hamburger menu 1px to avoid overlapping navbar border

--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -214,7 +214,7 @@ main {
   flex-direction: column;
   align-items: center;
   position: fixed;
-  top: 40px;
+  top: 41px;
   width: 300px;
   left: 0px;
   background-color: #3d434f;
